--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,15 @@ vector_cache/bnb
 vector_cache/btc
 vector_cache/eth
 vector_cache/ltc
+data/symbolsData/symbolsData_2018032120211022_5min_v1_origin.pkl
+data/symbolsData/symbolsData_2021090920211022_5min_v1_origin.pkl
+data/symbolsSig/symbolsSigAvg_2018050120211022_5min_v1_ar.pkl
+data/symbolsSig/symbolsSigAvg_2018050120211022_5min_v1_cci.pkl
+data/symbolsSig/symbolsSigAvg_2018050120211022_5min_v1_csi.pkl
+data/symbolsSig/symbolsSigAvg_2018050120211022_5min_v1_er.pkl
+data/symbolsSig/symbolsSigAvg_2018050120211022_5min_v1_roc.pkl
+data/symbolsSig/symbolsSigTotal_2018050120211022_5min_v1_ar.pkl
+data/symbolsSig/symbolsSigTotal_2018050120211022_5min_v1_cci.pkl
+data/symbolsSig/symbolsSigTotal_2018050120211022_5min_v1_csi.pkl
+data/symbolsSig/symbolsSigTotal_2018050120211022_5min_v1_er.pkl
+data/symbolsSig/symbolsSigTotal_2018050120211022_5min_v1_roc.pkl
