新增指标画图功能

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,7 @@ vector_cache/axs
 vector_cache/mana
 vector_cache/axs
 vector_cache/mana
+vector_cache/axs
+vector_cache/matic
+vector_cache/axs
+vector_cache/axs
