--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,7 @@ vector_cache/axs
 vector_cache/matic
 vector_cache/axs
 vector_cache/axs
+vector_cache/axs
+vector_cache/axs
+vector_cache/axs
+vector_cache/axs
